# cgml-python

./: .gitmodules  TODO.md  pyproject.toml
cgml/: cli.py  engine.py  loader.py  simulator.py  state.py
