[build-system]
requires = ["setuptools>=75.3.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgml"
version = "0.1.0"
description = "Python implementation of the CGML runtime (loader, engine, simulator)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "David Danssaert" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "pyyaml-include>=2.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.1",
  "ruff>=0.12.9",
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "types-PyYAML>=6.0.12.20241230",
]

[project.urls]
Homepage = "https://github.com/your-org/cgml-python"
Issues = "https://github.com/your-org/cgml-python/issues"

[project.scripts]
simulate = "cgml.cli:simulate"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cgml*"]

# Optional tooling configuration
[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = [
  # Allow module-level import conventions and some flexibility until codebase is polished
]

[tool.mypy]
python_version = "3.8"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]
